--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Thibault Buathier",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.16.2",
-    "fast-csv": "^2.4.1"
+    "fast-csv": "^2.4.1",
+    "gulp": "^3.9.1",
+    "jquery": "^3.2.1"
   }
 }
