--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "author": "Thibault Buathier",
@@ -15,5 +16,8 @@
     "fast-csv": "^2.4.1",
     "gulp": "^3.9.1",
     "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.5"
   }
 }
