--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "Thibault Buathier",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.2",
     "express": "^4.16.2",
     "fast-csv": "^2.4.1",
     "gulp": "^3.9.1",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {
     "nodemon": "^1.12.5"
