--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "author": "Thibault Buathier",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "csvjson": "^5.0.0",
     "express": "^4.16.2",
     "fast-csv": "^2.4.1",
     "gulp": "^3.9.1",
     "jquery": "^3.2.1",
+    "json2csv": "^3.11.5",
     "popper.js": "^1.12.9"
   },
   "devDependencies": {
+    "gulp-clean-css": "^3.9.0",
+    "gulp-minify": "^2.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "nodemon": "^1.12.5"
   }
 }
